--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# E:\0-Projects\Algo\.gitignore
+
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 ##################################################################
