--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,21 @@
 {
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.13.1",
+    "next": "^14.2.33",
     "next-themes": "^0.4.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.0",
     "react-redux": "^9.2.0",
     "yup": "^1.7.1"
@@ -11,8 +23,13 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^24.9.2",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.18",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.7.2"
   }
 }
