--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,30 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@reduxjs/toolkit": "^2.9.2",
-    "axios": "^1.13.1",
-    "next": "^14.2.33",
+    "@reduxjs/toolkit": "^2.10.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "axios": "^1.13.2",
+    "next": "16.0.1",
     "next-themes": "^0.4.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-redux": "^9.2.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.10",
-    "@types/node": "^24.9.2",
-    "@types/react": "^18.3.17",
-    "@types/react-dom": "^18.3.5",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.18",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
-    "typescript": "^5.7.2"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
